system/apcupsd/resources/apcupsd.yaml
apiVersion: apps/v1
kind: DaemonSet

metadata:
  name: apcupsd

spec:
  selector:
    matchLabels:
      app: apcupsd
  template:
    metadata:
      labels:
        app: apcupsd
    spec:
      nodeSelector:
        kubernetes.io/hostname: hydrogen
      containers:
        - name: apcupsd
          image: docker.io/sfudeus/apcupsd:2026-05-31
          securityContext:
            privileged: true
          ports:
            - name: nis
              containerPort: 3551
          volumeMounts:
            - name: config
              mountPath: /etc/apcupsd/apcupsd.conf
              subPath: apcupsd.conf
            - name: log
              mountPath: /var/log
            - name: run
              mountPath: /run/apcupsd
        - name: apcupsd-events
          image: docker.io/library/busybox:1.38
          command:
            - sh
            - -c
            - |
              touch /var/log/apcupsd.events
              tail -n +1 -f /var/log/apcupsd.events
          volumeMounts:
            - name: log
              mountPath: /var/log
      volumes:
        - name: config
          configMap:
            name: apcupsd-config
        - name: log
          emptyDir: {}
        - name: run
          emptyDir: {}
