system/apcupsd/resources/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: service
  labels:
    app: apcupsd

spec:
  selector:
    app: apcupsd
  type: ClusterIP
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: nis
      port: 3551
      targetPort: 3551
