system/apcupsd/resources/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: apcupsd
spec:
  podSelector:
    matchLabels:
      app: apcupsd
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: apcupsd
          podSelector:
            matchLabels:
              app: apcupsd-exporter
      ports:
        - port: 3551
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: apcupsd-exporter
spec:
  podSelector:
    matchLabels:
      app: apcupsd-exporter
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/component: opentelemetry-collector
              app.kubernetes.io/instance: monitoring.otelcol-gateway
      ports:
        - port: 9162
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: exporter-egress
  namespace: apcupsd
spec:
  endpointSelector:
    matchLabels:
      k8s:app: apcupsd-exporter
  enableDefaultDeny:
    ingress: false
    egress: false
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: TCP
            - port: "53"
              protocol: UDP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: apcupsd
            k8s:app: apcupsd
      toPorts:
        - ports:
            - port: "3551"
              protocol: TCP
